Fixes comment-count-spacing

--- a/app/assets/stylesheets/components/_discussion_list.css.sass
+++ b/app/assets/stylesheets/components/_discussion_list.css.sass
@@ -24,4 +24,5 @@
 
   .CardList-label
     @include gamma
+    margin-bottom: $default-spacing / 2
     text-transform: uppercase
